<resources>
    <string name="app_name">KindyStarts</string>
    <string name="text_logo">"Logo de la app KindyStarts"</string>
    <string name="text_button_createAccount">"Crear cuenta"</string>
    <string name="text_button_login">"Iniciar sesión"</string>
    <string name="text_registerTitle">"Formulario de Registro"</string>
    <string name="text_registerTitleTutor">"Datos del padre/madre/tutor"</string>
    <string name="text_fullName">"Nombre completo"</string>
    <string name="text_email">"Correo electrónico"</string>
    <string name="text_phone">"Teléfono de contacto"</string>
    <string name="text_password">"Contraseña"</string>
    <string name="text_registerTitleChild">"Datos del niño/a"</string>
    <string name="text_birthDate">"Fecha de nacimiento"</string>
    <string name="text_home">"Domicilio"</string>


    <string name="text_register">"Registrar"</string>
    <string name="text_hello">"Hola Diego"</string>
    <string name="text_login">"Hola desde login"</string>
    <string name="descripcion_del_logo">Logo de la aplicación KindyStarts</string>


    <string-array name="mensajes_bienvenida">
        <item>🌞 Hoy es un gran día para aprender jugando</item>
        <item>🌱 Cada pequeño paso cuenta en el crecimiento</item>
        <item>🎶 Las risas son la mejor melodía del jardín</item>
        <item>🐥 Jugar es la forma favorita de aprender</item>
        <item>📚 Los primeros recuerdos son los más valiosos</item>
        <item>🌻 Cada niño es una semilla única que florece con cuidado</item>
        <item>🧩 Descubrir, crear, compartir: así crecemos</item>
        <item>🌈 Un mundo de colores espera por vos</item>
        <item>🐞 La infancia es la tierra donde florece la vida</item>
    </string-array>


</resources>