<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/app_background_color"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/mi_logo_principal"
        android:contentDescription="@string/text_logo" />

    <TextView android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_msg"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_login"
        android:backgroundTint="@color/button"
        android:layout_marginTop="48dp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_createAccount"
        android:backgroundTint="@color/button"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        />

</LinearLayout>